Add: CreateJWT function

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=battleship-server;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "AppSettings": {
+    "Token": "JWTSuperSecretString"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
